--- a/README.html
+++ b/README.html
@@ -22,7 +22,7 @@
 <p>Copyright Martin-D. Lacasse (2023)</p>
 <h2 id="disclaimer-i-am-not-a-financial-planner.-you-make-your-own-decisions.-this-program-comes-with-no-garanteee.-use-at-your-own-risk.">Disclaimer: I am not a financial planner. You make your own decisions. This program comes with no garanteee. Use at your own risk.</h2>
 <h2 id="capabilities">Capabilities</h2>
-<p>ARP Lab contains historical data from 1928 and can generate scenarios using this data, or using random data created from historical statistics. It has many graphing capabilities as well as many heuristics to optimize wealth over the time span of a scenario. These include smart banking strategies, coordinated assets allocations between types of accounts and between spouses, and a basic Roth conversion optimizer still under development.</p>
+<p>ARP Lab contains historical data from 1928 to last year and can generate scenarios using this data, or using random data created from historical statistics. It has many graphing capabilities as well as many heuristics to optimize wealth over the time span of a scenario. These include smart banking strategies, coordinated assets allocations between types of accounts and between spouses, and a basic Roth conversion optimizer still under development.</p>
 <h2 id="rules-and-assumptions">Rules and assumptions</h2>
 <p>ARP Lab relies on a few implicit assumptions:</p>
 <ul>
@@ -57,7 +57,7 @@
 <h2 id="tutorial">Tutorial</h2>
 <p>The best way to start is to read the file called jack+jill.ipynb. This file is meant to be run in jupyter notebook, but the file can also be read in preview mode. Once familiar with its contents, go to the next section that will get you started.</p>
 <h2 id="requirements-to-run-this-program">Requirements to run this program</h2>
-<p>ARP Lab is coded in Python and is best run using either the <em>jupyterlab</em> or <em>jupyter</em> notebook. Therefore, I recommend installing <em>Anaconda</em> on your computer. It can be found at anaconda.com. Follow the instruction on the web site to install anaconda on your computer.</p>
+<p>ARP Lab is coded in Python and is best run using either the <em>JupyterLab</em> or <em>jupyter</em> notebook. Therefore, I recommend installing <em>Anaconda</em> on your computer. It can be found at anaconda.com. Follow the instruction on the web site to install anaconda on your computer.</p>
 <p>The Jupyter Notebook interface is a Web-based application for authoring documents that combine live-code with narrative text, equations and visualizations.</p>
 <p>You will also need the capability to read and edit Excel files. One can have an Excel license, or use the LibreOffice free alternative.</p>
 <p>The intent of using a notebook is that one can configure calculations that suit one’s needs. Moreover, running calculations in JupyterLab is made to be relatively easy. There are many tutorials on that topic and a summary is given below.</p>
