--- a/README.html
+++ b/README.html
@@ -28,7 +28,7 @@
 <ul>
 <li>Assets tracking the S&amp;P 500 index;</li>
 <li>Assets representative of corporate bonds Baa;</li>
-<li>Assets similar to the 10-year Treasury bonds;</li>
+<li>Assets similar to the 10-year Treasury notes;</li>
 <li>Common assets tracking inflation.</li>
 </ul>
 <p>The goal of ARP lab is not to be able to track all available indices and assets, but rather to allow choosing from a limited selection of classes of assets representative of dissimilar volatilities and returns. New classes of assets could easily be added to ARP Lab, but it would be at the cost of complicating the user’s experience.</p>
